<resources>
    <string name="app_name">LampStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="username">UserName</string>
    <string name="user01">User01</string>
    <string name="email">Email</string>
    <string name="email_exp">User@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
</resources>