<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.ProfileActivity">

  <include layout="@layout/toolbar"></include>

    <!-- When setting up a Text Size, we use sp -->
    <!-- When setting up a value for views/ constraints / etc... , we use dp -->
    <!-- Don't put hardcoded string in android:text : store them in strings.xml-->
    <LinearLayout
        android:id="@+id/linear_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="35dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:paddingTop="35dp"
            android:src="@drawable/man" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_l"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="49dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_person">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/user01"
            android:textSize="15sp">
        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="20dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:src="@drawable/email">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="49dp"
            android:text="@string/email_exp"
            android:textSize="15sp">
        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="200dp"
        android:layout_below="@id/lin"
        android:orientation="vertical">
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:textColor="#4C99AC"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_edit_"
            android:paddingLeft="20dp"
            android:layout_marginLeft="-10dp"
            android:text="@string/edit_profile"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:textColor="#4C99AC"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_lock"
            android:paddingLeft="20dp"
            android:layout_marginLeft="-10dp"
            android:text="@string/change_password"/>


    </LinearLayout>


</RelativeLayout>